--- a/style.css
+++ b/style.css
@@ -4,12 +4,43 @@
     border: none;
 }
 header{
-
+    height: 20vh;
+    width: 100%;
+    background-color: darkkhaki;
+}
+header h2{
+    text-align: center;
+}
+header p{
+    text-align: center;
+}
+.wrapper{
+    height: 70vh;
+    width: 80%;
+    margin: auto;
 }
 
-.game{
-
+.board{
+    height: 50vh;
+    width: 50%;
+    background-color: black;
+    margin: auto;
+    margin-top: 30px;
+}
+.grid{
+    position: relative;
+    top: 60px;
+    left: 50px;
+    height: 350px;
+    width: 350px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: 100px 100px 100px;
+    grid-template-rows: 100px 100px 100px;
 }
 .box{
-    
+    height: 80px;
+    width: 80px;
+    background-color: white;
+    border-radius: 10px;
 }
